Fix loader svg not rendering properly during page load

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,50 @@
     <meta name="viewport" content="width=device-width" />
 
     <!--     Fonts and login     -->
+    <style>
+        .center {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+        .load-svg {
+            animation: 1.2s linear infinite rotate;
+        }
+        @keyframes rotate {
+            from {
+                transform: rotate(0);
+                transform-origin: 18px 18px;
+            } to {
+                transform: rotate(360deg);
+                transform-origin: 18px 18px;
+            }
+        }
+    </style>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
   <app-root>
-    <div class="loader">
-      <svg class="circular" viewBox="25 25 50 50">
-          <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
-      </svg>
+    <div class="center">
+        <svg viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" width="500" height="500">
+            <defs>
+                <linearGradient x1="8.042%" y1="0%" x2="65.682%" y2="23.865%" id="a">
+                    <stop stop-opacity="0" offset="0%" stop-color="#eee"/>
+                    <stop stop-color="#AAA" stop-opacity=".5" offset="50%"/>
+                    <stop offset="100%" stop-color="#888"/>
+                </linearGradient>
+            </defs>
+            <g fill="none" fill-rule="evenodd">
+                <g transform="translate(1 1)">
+                    <path d="M36 18c0-9.94-8.06-18-18-18" id="Oval-2" stroke="url(#a)" stroke-width="2" class="load-svg">
+                    </path>
+                    <circle cx="36" cy="18" r="1" fill="#888" class="load-svg">
+                    </circle>
+                </g>
+            </g>
+        </svg>
     </div>
   </app-root>
 </body>
